--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
-    "name": "Make New e3 great again",
+    "name": "NCTU 新e3救星",
+    "short_name": "NCTU Newe3 Savior",
     "version": "1.0",
     "description": "Make New e3 great again",
     "manifest_version": 2,
