--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "make-newe3-great-again",
+  "name": "nctu-newe3-savior",
   "version": "1.0.0",
   "main": "index.js",
   "license": "GPL-3.0",
