--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "NCTU 新e3救星",
     "short_name": "NCTU Newe3 Savior",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Make New e3 great again",
     "manifest_version": 2,
     "web_accessible_resources": [
@@ -36,6 +36,14 @@
             ],
             "css": [
                 "dist/index.css"
+            ]
+        },
+        {
+            "matches": [
+                "https://e3new.nctu.edu.tw/login/index.php*"
+            ],
+            "css": [
+                "dist/login.css"
             ]
         }
     ]
