--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,15 @@
 {
     "name": "NCTU 新e3救星",
     "short_name": "NCTU Newe3 Savior",
-    "version": "1.3.5",
+    "version": "1.4.0",
     "description": "Make New e3 great again",
     "manifest_version": 2,
     "web_accessible_resources": [
         "dist/loading.svg"
     ],
+    "icons": {
+        "128": "icon.png"
+    },
     "permissions": [
         "webRequest",
         "webRequestBlocking",
