--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "GPL-3.0",
   "dependencies": {
+    "linkifyjs": "^2.1.8",
     "micromodal": "^0.4.0",
     "moment": "^2.24.0"
   },
