--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.85",
+    "@types/linkifyjs": "^2.1.2",
     "@types/micromodal": "^0.3.0",
     "archiver": "^3.0.0",
     "ts-loader": "^6.0.0",
