--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "NCTU 新e3救星",
     "short_name": "NCTU Newe3 Savior",
-    "version": "1.6.0",
+    "version": "1.7.0",
     "description": "Make New e3 great again",
     "manifest_version": 2,
     "web_accessible_resources": [
@@ -13,6 +13,7 @@
     "permissions": [
         "webRequest",
         "webRequestBlocking",
+        "cookies",
         "https://e3new.nctu.edu.tw/*"
     ],
     "background": {
