--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "scripts": {
     "build": "webpack --mode production",
     "watch": "webpack --watch --progress --mode development",
-    "dist": "yarn build && node dist.js"
+    "dist": "yarn build && node dist.js",
+    "lint": "eslint . --ext ts --ext tsx --ext js"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.124",
-    "@types/linkifyjs": "^2.1.3",
-    "@types/micromodal": "^0.3.2",
-    "archiver": "^5.0.2",
-    "ts-loader": "^8.0.4",
-    "tslint": "^6.1.3",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "@types/chrome": "^0.0.85",
+    "@types/linkifyjs": "^2.1.2",
+    "@types/micromodal": "^0.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "archiver": "^3.0.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
+    "ts-loader": "^6.0.0",
+    "typescript": "^3.4.5",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
   }
 }
