--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,18 +4,17 @@ on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
-    - run: yarn install
-    - run: npx tslint --project tsconfig.json
-    - run: yarn dist
-    - uses: actions/upload-artifact@master
-      with:
-        name: dist
-        path: dist.zip
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - run: yarn install
+      - run: yarn lint
+      - run: yarn dist
+      - uses: actions/upload-artifact@master
+        with:
+          name: dist
+          path: dist.zip
